1. Add Custom Exception Middleware - InternalServerErro 2. Add Result Not Found 3. Add  Not Found EndPoint 4. Add Validation Error Response 5. Add  Refactor Program Class 6.  Project Business 7. Add Basket Module - Entities 8. Add Redis In Memory Database 9. Add Basket Module - Repository 10. Add  Basket Module - Service 11. Add  Basket Module - Controller

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
+    <Compile Remove="Models\NewFolder1\**" />
+    <EmbeddedResource Remove="Models\NewFolder1\**" />
+    <None Remove="Models\NewFolder1\**" />
   </ItemGroup>
 
 </Project>
