--- a/E-Commerce/appsettings.json
+++ b/E-Commerce/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ECommerce;Trusted_Connection=true;TrustServerCertificate=False ;Encrypt=false"
+    "DefaultConnection": "Server=.;Database=ECommerce;Trusted_Connection=true;TrustServerCertificate=False ;Encrypt=false",
+    "RedisConnection": "localhost"
   }
 }
