1. Add Identity Module Overview 2. Add Entities & Identity DbContext 3. Add Seeding Default users & roles 4. Add Authentication Service [Login & Register] 5. Add Authentication Controller [Login & Register] 6. Add JWT Introduction 7. Add Token Creation 8. Add Jwt Options & Token Validation

--- a/E-Commerce/E-Commerce.csproj
+++ b/E-Commerce/E-Commerce.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\Presentation\Presentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
