--- a/E-Commerce/appsettings.Development.json
+++ b/E-Commerce/appsettings.Development.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=ECommerce;Trusted_Connection=true;TrustServerCertificate=False ;Encrypt=false",
+    "RedisConnection": "localhost",
+    "IdentityConnection": "Server=.;Database=ECommerce.Identity;Trusted_Connection=true;TrustServerCertificate=False ;Encrypt=false"
   }
 }
