--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -12,4 +12,8 @@
     <None Remove="Models\NewFolder1\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.16" />
+  </ItemGroup>
+
 </Project>
